Fixed text overlapping bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -138,14 +138,14 @@ a:hover {
 
 .btn-solid-reg {
 	display: inline-block;
-	padding: 1.375rem 2.25rem 1.375rem 2.25rem;
+    padding: 1.375rem 2.25rem;
 	border: 1px solid #026cfe;
 	border-radius: 32px;
 	background-color: #026cfe;
 	color: #ffffff;
 	font-weight: 600;
 	font-size: 0.875rem;
-	line-height: 0;
+	line-height: 1;
 	text-decoration: none;
 	transition: all 0.2s;
 }
@@ -823,9 +823,7 @@ input[type='checkbox'] {
 /*     Skills       */
 /********************/
 .basic-4 {
-	height: 1000px;
-	display: flex;
-	flex-direction: column;
+	min-height: 1000px;
 	justify-content: center;
 	align-items: center;
 	padding-top: 2rem;
@@ -864,43 +862,6 @@ input[type='checkbox'] {
 
 .basic-5 .image-container {
 	margin-bottom: 3rem;
-}
-
-
-/**********************/
-/*     Statistics     */
-/**********************/
-.counter {
-	padding-top: 2rem;
-	padding-bottom: 3.5rem;
-	text-align: center;
-}
-
-.counter #counter {
-	margin-bottom: 0.75rem;
-}
-
-.counter #counter .cell {
-	display: inline-block;
-	width: 124px;
-	margin-right: 1.5rem;
-	margin-bottom: 3.5rem;
-	margin-left: 1.5rem;
-	vertical-align: top;
-}
-
-.counter #counter .counter-value {
-	color: #1b1e7b;
-	font-weight: 700;
-	font-size: 3.25rem;
-	line-height: 3.75rem;
-	vertical-align: middle;
-}
-
-.counter #counter .counter-info {
-	margin-bottom: 0;
-	font-size: 0.875rem;
-	vertical-align: middle;
 }
 
 
